--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -242,9 +242,7 @@
                     android:layout_weight="1"
                     android:orientation="vertical"
                     android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-
-                    >
+                    android:paddingRight="16dp">
 
                     <TextView
                         android:id="@+id/departure_airport_name"
